# wordle_xiao_yuxi

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: Makefile  api.rst  conf.py  example.ipynb  index.md  make.bat
src/wordle<yx2910>/: __init__.py
src/wordle_yx2910/: __init__.py  wordle.py
tests/: test_wordle<yx2910>.py  test_wordle_yx2910.py
