[tool.poetry]
name = "wordle<yx2910>"
version = "0.1.0"
description = "Adding a wordle function to the cookiecutter"
authors = ["Yuxi"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
ipython = "^9.6.0"
pre-commit = "^4.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
