[tool.poetry]
name = "wordle_yx2910"
version = "0.1.0"
description = "Adding a wordle function to the cookiecutter"
authors = ["Yuxi"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
ipython = "^9.6.0"
pre-commit = "^4.3.0"
sphinx = "^8.2.3"
myst-nb = "^1.3.0"
sphinx-autoapi = "^3.6.1"
sphinx-rtd-theme = "^3.0.2"


[tool.poetry.group.docs.dependencies]
sphinx = "^8.2.3"
furo = "^2025.9.25"
sphinx-autodoc-typehints = "^3.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
